--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@ Single Page Applications (SPA) &amp; Dashboards
 * baehm
 * bush
 * baehm
+
+---
+
+class: last-slide, center, middle
+
+# Thank you
+
+---
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
