--- a/index.html
+++ b/index.html
@@ -36,11 +36,44 @@ class: inverse, center, middle
 ---
 
 # 1. Feedback of Data Quality
+Evaluation of Data Quality 
+
+&lt;img class="frame-image" src="pics/framework_weiskopf.png" alt="Data Quality Framework"&gt;
+
+---
+
+# 1. Feedback of Data Quality
+Data Quality Feedback
+
+&lt;img class="motiv-image" src="pics/motivation.png" alt="Motivation with Feedback"&gt;
+
+---
+
+
+# 1. Feedback of Data Quality
+Interactivity needed?
+
+
+
+
+---
+
+
+# 2. TxCohort
 Single Page Applications (SPA) &amp; Dashboards
 
-* baehm
-* bush
-* baehm
+
+* multicenter study with ~600 participants (all ages)
+* participants after transplation of heart, lung, pancreas, kidneys, liver or stem cells
+* __primary aim__: organ transplantation and its influence on infection susceptibility and organ function
+* 14 heterogene patient records (demography, postoperative procedures, bacterial infections, etc.)
+* monthly exports with in separate csv files (5 centers x 6 organs x 14 records)
+
+
+
+
+
+
 
 ---
 
