--- a/index.html
+++ b/index.html
@@ -53,26 +53,93 @@ Data Quality Feedback
 # 1. Feedback of Data Quality
 Interactivity needed?
 
+* in some way, complex/high dimensional data has to be visualized
+
+* __busy__ clinicans/investigator need all information on the __first look__
+
+* on demand: __filtering__, __selecting__, __zooming__ 
+
+* dynamic, simple, accessible --&gt; __web-based &amp; real-time applications__
+
+
 
 
 
 ---
-
+class: dzif
 
 # 2. TxCohort
-Single Page Applications (SPA) &amp; Dashboards
+### Transplantation Cohort - an Infrastructure of the German Center for Infection Control (DZIF)
 
 
 * multicenter study with ~600 participants (all ages)
+
 * participants after transplation of heart, lung, pancreas, kidneys, liver or stem cells
-* __primary aim__: organ transplantation and its influence on infection susceptibility and organ function
-* 14 heterogene patient records (demography, postoperative procedures, bacterial infections, etc.)
-* monthly exports with in separate csv files (5 centers x 6 organs x 14 records)
+
+* __primary aim__: organ transplantation and its influence on &lt;br&gt;infection susceptibility and organ function
+
+* 14 heterogene patient records (demography, postoperative procedures, &lt;br&gt; bacterial infections, etc.)
+
+* monthly exports with in separate csv files &lt;br&gt; (5 centers x 6 organs x 14 records)
+
+&lt;img class="dzif-image" src="pics/dzif_map.png" alt="Motivation with Feedback"&gt;
+
+---
+
+# 2. TxCohort - Data Processes
+ 
+&lt;img class="tx-flow-image" src="pics/tx_flow.png" alt="Data proccesses with in TxCohort"&gt;
+
+
+---
+
+# Sometimes you have to run before you can walk.
+ 
+&lt;iframe width="560" height="315" src="https://www.youtube.com/embed/ZwOxM0-byvc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen&gt;&lt;/iframe&gt;
+
+
+---
+
+# 3. TxDashboard
+
+### Needs Assessment 
+
+* Study Nurses, Clinicans, (Local-) Investigators
+
+* content: 
+    + Study Population / Recruitment Rate
+    + Biosamples
+    + Follow-up Performance
+    + Data Quality
+    
+* common scripting language researcher and clinican (can) understand:
+    + __language__: `R`
+    + __documentation__: `rmarkdown`
+    + __graphs__: `ggplot2`, `googleVis`, `leaflet`, `plotly`
+    + __tables__: `knitr`, `kableExtra`, `DT`
+    
+* single page, quick to understand
+
+---
+
+# 3. TxDashboard
+
+Demonstration
+
+
+---
+
+# 4. What's next?
 
 
 
+* Extension of data quality assessment (more dimensions &amp; indicators in regards to user needs)
 
+* implementation of gamified features (leaderboards, awards, badges)
 
+* measuring user interaction (user research)
+
+* extension to `angular.js`/`shiny` frameworks (more flexibility)
 
 
 ---
@@ -86,7 +153,7 @@ class: last-slide, center, middle
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
 "ratio": "14.6:9",
-"highlightStyle": "github",
+"highlightStyle": "gitlab",
 "highlightLines": true,
 "countIncrementalSlides": false,
 "navigation": {
