--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Stephan Glöckner" />
     <meta name="author" content="email: stephan.gloeckner@helmholtz-hzi.de" />
-    <link rel="stylesheet" href="css\style.css" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
@@ -28,7 +28,7 @@ class: inverse, center, middle
 
 &lt;h2&gt;2. TxCohort&lt;/h2&gt;
 
-&lt;h2&gt;3. developed Dashboard framework&lt;/h2&gt;
+&lt;h2&gt;3. Developed Dashboard framework&lt;/h2&gt;
 
 &lt;h2&gt;4. What next?&lt;/h2&gt;
 
@@ -53,7 +53,7 @@ Data Quality Feedback
 # 1. Feedback of Data Quality
 Interactivity needed?
 
-* in some way, complex/high dimensional data has to be visualized
+* in some way, complex/high dimensional data has to be reported
 
 * __busy__ clinicans/investigator need all information on the __first look__
 
@@ -94,15 +94,16 @@ class: dzif
 ---
 
 # Sometimes you have to run before you can walk.
- 
-&lt;iframe width="560" height="315" src="https://www.youtube.com/embed/ZwOxM0-byvc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen&gt;&lt;/iframe&gt;
+
+
+
+&lt;div align="center"&gt;
+&lt;iframe width="896" height="504" src="https://www.youtube.com/embed/M-oALaQctww" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen&gt;&lt;/iframe&gt;&lt;/div&gt;
 
 
 ---
 
-# 3. TxDashboard
-
-### Needs Assessment 
+# 3. TxDashboard - Needs Assessment 
 
 * Study Nurses, Clinicans, (Local-) Investigators
 
@@ -112,19 +113,21 @@ class: dzif
     + Follow-up Performance
     + Data Quality
     
+* single page, quick to understand
+
 * common scripting language researcher and clinican (can) understand:
+
     + __language__: `R`
     + __documentation__: `rmarkdown`
     + __graphs__: `ggplot2`, `googleVis`, `leaflet`, `plotly`
-    + __tables__: `knitr`, `kableExtra`, `DT`
-    
-* single page, quick to understand
+    + __tables__: `knitr`, `kableExtra`, `DT`, `formattable`
+    + __color-scales__: `viridis`, colorbrewer: `RdYlBu`
 
 ---
 
 # 3. TxDashboard
 
-Demonstration
+[Demonstration](dashboard.html)
 
 
 ---
@@ -137,16 +140,18 @@ Demonstration
 
 * implementation of gamified features (leaderboards, awards, badges)
 
-* measuring user interaction (user research)
+* UXD
+
+* measuring user interaction (UXR)
 
 * extension to `angular.js`/`shiny` frameworks (more flexibility)
 
 
 ---
 
-class: last-slide, center, middle
+class: last-slide
 
-# Thank you
+Thank you for your attention.
 
 ---
     </textarea>
