--- a/index.html
+++ b/index.html
@@ -40,12 +40,20 @@ Evaluation of Data Quality
 
 &lt;img class="frame-image" src="pics/framework_weiskopf.png" alt="Data Quality Framework"&gt;
 
+&lt;div style="position: absolute; bottom: 20px; right: 20px; text-align:right;"&gt;
+   Weiskopf, Bakken, Hripcsak &amp; Weng (2017)
+&lt;/div&gt;
+
 ---
 
 # 1. Feedback of Data Quality
 Data Quality Feedback
 
 &lt;img class="motiv-image" src="pics/motivation.png" alt="Motivation with Feedback"&gt;
+
+&lt;div style="position: absolute; bottom: 20px; right: 20px; text-align:right;"&gt;
+   Glöckner &amp; Sinnott (2016)
+&lt;/div&gt;
 
 ---
 
@@ -62,7 +70,9 @@ Interactivity needed?
 * dynamic, simple, accessible --&gt; __web-based &amp; real-time applications__
 
 
-
+&lt;div style="position: absolute; bottom: 20px; right: 20px; text-align:right;"&gt;
+   Knaflic (2015) &amp; Few (2013)
+&lt;/div&gt;
 
 
 ---
